--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "merkle"
+name = "merkle_light"
 version = "0.1.0"
 authors = [
   "Ivan Prisyazhnyy <john.koepi@gmail.com>"
 ]
 
-description   = "Merkle tree implementation with support for generation of inclusion proofs."
+description   = "Light merkle tree implementation with SPV support and dependency agnostic."
 license       = "BSD-3-Clause"
-homepage      = "https://github.com/sitano/merkle.rs"
-repository    = "https://github.com/sitano/merkle.rs"
+homepage      = "https://github.com/sitano/merkle_simple"
+repository    = "https://github.com/sitano/merkle_simple"
 readme        = "README.md"
 keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
@@ -16,4 +16,4 @@ categories    = ["data-structures", "cryptography"]
 [dependencies]
 
 [dev-dependencies]
-merkle_derive = { path = "../merkle_derive" }
+merkle_light_derive = { path = "../merkle_derive" }
