--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -7,8 +7,8 @@ authors = [
 
 description   = "Light merkle tree implementation with SPV support and dependency agnostic."
 license       = "BSD-3-Clause"
-homepage      = "https://github.com/sitano/merkle_simple"
-repository    = "https://github.com/sitano/merkle_simple"
+homepage      = "https://github.com/sitano/merkle_light"
+repository    = "https://github.com/sitano/merkle_light"
 readme        = "README.md"
 keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
