--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -9,6 +9,7 @@ description   = "Light merkle tree implementation with SPV support and dependenc
 license       = "BSD-3-Clause"
 homepage      = "https://github.com/sitano/merkle_light"
 repository    = "https://github.com/sitano/merkle_light"
+documentation = "https://sitano.github.io/merkle_light/merkle_light/index.html"
 readme        = "README.md"
 keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
