--- a/merkle_derive/Cargo.toml
+++ b/merkle_derive/Cargo.toml
@@ -20,5 +20,5 @@ proc-macro = true
 [dependencies]
 syn = "0.11.11"
 quote = "0.3.15"
-merkle_light = { path = "../merkle" }
+merkle_light = { path = "../merkle", version = "0.1.0" }
 
