--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,37 @@
 language: rust
+cache: cargo
+
+env:
+  global:
+    - CLIPPY_VERSION=0.0.172
 
 rust:
   - stable
   - beta
   - nightly
+  - nightly-2017-11-22
 
 matrix:
+  include:
+    - rust: nightly-2017-11-22
+      env: CLIPPY="true"
   allow_failures:
-    - rust: nightly
+    - rust:
+      - nightly
+      - nightly-2017-11-22
+
+before_script:
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-11-22" ]]; then
+      cargo install clippy --vers $CLIPPY_VERSION --force;
+    fi'
 
 script:
   - cargo build
   - cargo test
   - cargo doc --no-deps
+  - cargo build --all-features
+  - cargo test --all-features
+  - cargo doc --all-features --no-deps
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-10-08" ]]; then
+      cargo clippy -- -D warnings;
+    fi'
