make clippy 172 to be built against nightly-2017-11-20

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,16 @@ rust:
   - stable
   - beta
   - nightly
-  - nightly-2017-11-22
+  - nightly-2017-11-20
 
 matrix:
-  include:
-    - rust: nightly-2017-11-22
-      env: CLIPPY="true"
   allow_failures:
     - rust:
       - nightly
-      - nightly-2017-11-22
+      - nightly-2017-11-20
 
 before_script:
-  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-11-22" ]]; then
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-11-20" ]]; then
       cargo install clippy --vers $CLIPPY_VERSION --force;
     fi'
 
@@ -33,5 +30,5 @@ script:
   - cargo test --all-features
   - cargo doc --all-features --no-deps
   - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-10-08" ]]; then
-      cargo clippy -- -D warnings;
+      cargo clippy -- -A blacklisted-name -A unreadable-literal -D warnings --all
     fi'
