--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -17,12 +17,14 @@ categories    = ["data-structures", "cryptography"]
 [dependencies]
 
 ring = { version = "^0.12.1", optional = true }
+rust-crypto = { version = "^0.2.36", optional = true }
 
 [dev-dependencies]
 
 [features]
 default = []
-bitcoin = ["ring"]
+bitcoin = ["ring", "rust-crypto"]
+chaincore = ["rust-crypto"]
 
 [package.metadata.release]
 sign-commit = true
