--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -18,6 +18,7 @@ categories    = ["data-structures", "cryptography"]
 
 ring = { version = "^0.12.1", optional = true }
 rust-crypto = { version = "^0.2.36", optional = true }
+rand = { version = "^0.3", optional = true }
 
 [dev-dependencies]
 
@@ -25,6 +26,7 @@ rust-crypto = { version = "^0.2.36", optional = true }
 default = []
 bitcoin = ["ring", "rust-crypto"]
 chaincore = ["rust-crypto"]
+crypto_bench = ["rust-crypto", "rand"]
 
 [package.metadata.release]
 sign-commit = true
