--- a/merkle_derive/Cargo.toml
+++ b/merkle_derive/Cargo.toml
@@ -20,7 +20,7 @@ proc-macro = true
 [dependencies]
 syn = "0.11.11"
 quote = "0.3.15"
-merkle_light = { path = "../merkle", version = "*" }
+merkle_light = { path = "../merkle", version = "^0.3.0" }
 
 [package.metadata.release]
 sign-commit = true
