--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -26,7 +26,7 @@ rand = { version = "^0.3", optional = true }
 default = []
 bitcoin = ["ring", "rust-crypto"]
 chaincore = ["rust-crypto"]
-crypto_bench = ["rust-crypto", "rand"]
+crypto_bench = ["rust-crypto", "ring", "rand"]
 
 [package.metadata.release]
 sign-commit = true
