implement basic parallelism

--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -15,7 +15,7 @@ keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
 
 [dependencies]
-
+rayon = "1.0.0"
 ring = { version = "^0.12.1", optional = true }
 rust-crypto = { version = "^0.2.36", optional = true }
 rand = { version = "^0.3", optional = true }
