fix: travis and clippy
Closes #11

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,13 @@
 language: rust
 cache: cargo
 
-env:
-  global:
-    - CLIPPY_VERSION=0.0.172
-
 rust:
   - stable
-  - beta
-  - nightly
-  - nightly-2017-11-20
-
-matrix:
-  allow_failures:
-    - rust:
-      - nightly
-      - nightly-2017-11-20
+  - nightly-2019-02-26
 
 before_script:
-  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-11-20" ]]; then
-      cargo install clippy --vers $CLIPPY_VERSION --force;
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2019-02-26" ]]; then
+     rustup component add clippy-preview;
     fi'
 
 script:
@@ -29,4 +17,4 @@ script:
   - cargo build --all-features
   - cargo test --all-features
   - cargo doc --all-features --no-deps
-  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2017-10-08" ]]; then cargo clippy -- -A blacklisted-name -A unreadable-literal -D warnings --all; fi'
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly-2019-02-26" ]]; then cargo clippy --all -- -D warnings; fi'
