--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -14,20 +14,6 @@ readme        = "README.md"
 keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
 
-[dependencies]
-rayon = "1.0.0"
-ring = { version = "^0.14.1", optional = true }
-rust-crypto = { version = "^0.2.36", optional = true }
-rand = { version = "^0.3", optional = true }
-
-[dev-dependencies]
-
-[features]
-default = []
-bitcoin = ["ring", "rust-crypto"]
-chaincore = ["rust-crypto"]
-crypto_bench = ["rust-crypto", "ring", "rand"]
-
 [package.metadata.release]
 sign-commit = true
 upload-doc = true
@@ -37,3 +23,20 @@ pro-release-commit-message = "Start next development iteration {{version}}."
 tag-message = "Release version {{version}}."
 doc-commit-message = "Update documentation."
 dev-version-ext = "pre"
+
+[dependencies]
+rayon = "1.0.0"
+memmap = "0.7"
+ring = { version = "^0.14.1", optional = true }
+rust-crypto = { version = "^0.2.36", optional = true }
+rand = { version = "^0.3", optional = true }
+arrayref = "0.3.5"
+
+[dev-dependencies]
+byteorder = "1.3.1"
+
+[features]
+default = []
+bitcoin = ["ring", "rust-crypto"]
+chaincore = ["rust-crypto"]
+crypto_bench = ["rust-crypto", "ring", "rand"]
