--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "merkletree"
-version = "0.4.0"
+version = "0.4.1-alpha.0"
 authors = [
   "Ivan Prisyazhnyy <john.koepi@gmail.com>"
 ]
