--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "merkletree"
-version = "0.4.1"
+version = "0.4.2-alpha.0"
 authors = [
   "Ivan Prisyazhnyy <john.koepi@gmail.com>"
 ]
