Separate store source out of MT source (#37)
* Allow Store::new and Store::new_with_path to return errors (resolves #19).
Move Store code out of MT source and into a separate source file.
Minor refactoring to help readability.

* Update tests and documentation.

--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "merkletree"
-version = "0.10.0"
+version = "0.10.1"
 authors = [
+  "nemo <nemo@protocol.ai>",
+  "schomatis",
   "Ivan Prisyazhnyy <john.koepi@gmail.com>"
 ]
 
