--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -29,6 +29,7 @@ rand = { version = "^0.3", optional = true }
 arrayref = "0.3.5"
 tempfile = "3.0.7"
 positioned-io = "0.2"
+failure = "0.1.2"
 
 [dev-dependencies]
 byteorder = "1.3.1"
