--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -27,9 +27,11 @@ ring = { version = "^0.14.1", optional = true }
 rust-crypto = { version = "^0.2.36", optional = true }
 rand = { version = "^0.3", optional = true }
 arrayref = "0.3.5"
+tempdir = "0.3.7"
 tempfile = "3.0.7"
 positioned-io = "0.2"
 failure = "0.1.2"
+serde = { version = "1.0", features = ["derive"]}
 
 [dev-dependencies]
 byteorder = "1.3.1"
