--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,9 @@ arrayref = "0.3.5"
 tempdir = "0.3.7"
 tempfile = "3.0.7"
 positioned-io = "0.2"
-failure = "0.1.2"
 log = "0.4.7"
 serde = { version = "1.0", features = ["derive"]}
+anyhow = "1.0.23"
 
 [dev-dependencies]
 byteorder = "1.3.1"
