--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,12 @@ tempdir = "0.3.7"
 tempfile = "3.0.7"
 positioned-io = "0.2"
 failure = "0.1.2"
+log = "0.4.7"
 serde = { version = "1.0", features = ["derive"]}
 
 [dev-dependencies]
 byteorder = "1.3.1"
+env_logger = "0.7.1"
 
 [features]
 default = []
