refactor: migrate to 2018 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ documentation = "https://docs.rs/merkletree"
 readme        = "README.md"
 keywords      = ["merkle", "merkle-tree"]
 categories    = ["data-structures", "cryptography"]
+edition = "2018"
 
 [package.metadata.release]
 pre-release-commit-message = "chore(release): release {{version}}"
