--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ rayon = "1.0.0"
 memmap = "0.7"
 ring = { version = "^0.14.1", optional = true }
 rust-crypto = { version = "^0.2.36", optional = true }
-rand = { version = "^0.3", optional = true }
+rand = "0.7.3"
 arrayref = "0.3.5"
 tempdir = "0.3.7"
 tempfile = "3.0.7"
@@ -34,6 +34,7 @@ positioned-io = "0.2"
 log = "0.4.7"
 serde = { version = "1.0", features = ["derive"]}
 anyhow = "1.0.23"
+typenum = "1.11.2"
 
 [dev-dependencies]
 byteorder = "1.3.1"
@@ -43,4 +44,4 @@ env_logger = "0.7.1"
 default = []
 bitcoin = ["ring", "rust-crypto"]
 chaincore = ["rust-crypto"]
-crypto_bench = ["rust-crypto", "ring", "rand"]
+crypto_bench = ["rust-crypto", "ring"]
